# workout-api-fastapi

./: .gitignore  README.md  pyproject.toml
workout_api/: main.py
workout_api/atleta/: controller.py  schemas.py
